@@ -1,0 +1,22 @@
+dev-python/setuptools >=app-admin/eselect-python-20091230 =dev-lang/python-2*
+dev-python/setuptools || ( >=dev-lang/python-2.6 dev-python/simplejson ) >=app-admin/eselect-python-20091230 =dev-lang/python-2*
+0
+mirror://pypi/g/github-cli/github-cli-0.3.0.tar.gz
+
+http://pypi.python.org/pypi/github-cli/
+BSD
+A command-line interface to the GitHub Issues API v2
+~amd64 ~x86
+base distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
+
+
+
+
+3
+
+compile configure install postinst postrm prepare unpack
+
+
+
+
+
