@@ -3,13 +3,15 @@ Hash: SHA1
 
 AUX github-cli-0.2.9-Use_pythons_json.patch 2187 RMD160 53e1d03e80dc202c63592d4b7734857946162168 SHA1 c1abceac8cdee8a111b038368056bb6ef0d9db78 SHA256 2bb57139818c8e6e1e0b26465b12103076c6b19eab63981d3030aa77650a3d49
 DIST github-cli-0.2.9.tar.gz 9269 RMD160 9bec7f97428a6400ea2ba3747a4e70bb08e43224 SHA1 4e0f7b036ac7e5afe813df1d57e5eb1eda7e110d SHA256 a62738262798ab7e22998a04d002351ac57c6a7e76d7ebd058091bb76472e5a0
+DIST github-cli-0.3.0.tar.gz 9498 RMD160 af0d375a171d93a14d930b7f3585864c884ddabf SHA1 6f10485306e0f0b65ff23d5d6acb4ed8c3aa95be SHA256 b9573fdd413e6eb557b4e5297687c4be52adbe4941f38b6cdd0489d82907d097
 EBUILD github-cli-0.2.9.ebuild 637 RMD160 23f29ea8f8ec1415f4218f5f8ca07d73bbdc4d42 SHA1 65cbad7b19ed979c28eb1628bf2b6615d5e87210 SHA256 3076c7213cb086051b2490e466e9c504c2a537915820792311fca82df66776ff
-MISC ChangeLog 561 RMD160 f06a4078a1771965d5347334d25c0496b371f3f7 SHA1 3fce024ca055df993d7663804a473adfcaecaedf SHA256 08b6bd93621bd651cd8875837d6e0ee90c32afebdfb9af025f5f69ce1aa72889
+EBUILD github-cli-0.3.0.ebuild 644 RMD160 874f4daa9ac2c8bfc0809616e461f8fbac94e0be SHA1 afd40a4f799512ac1d64cbdc4161df9c7da888ad SHA256 9a2d8edaa9264a4844e938864c3606943ad6a9b8906e31fa6cd79f5857f588a6
+MISC ChangeLog 689 RMD160 c73a7b93859f1309ceab999f78d78f62cebfc185 SHA1 578e903bfc7836e608b3832e1f7f14b6f9cf16f0 SHA256 1593d42c075cfc354ef9bba17581d00042aa8e4e98e8152a9056d46910bd49f9
 MISC metadata.xml 644 RMD160 8fb3302e0cefaa95cf44d15279d7f3ecf96d4e99 SHA1 a91767b15995c4cf7dc9f2a92eac195940d2c228 SHA256 a7c4c3392b57fabe833fcbadd38bb0d2ccce69d319be50b4c29a5dee336a1828
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkyRc6QACgkQzJrj3cAXR0ntcQCdGdxVztzGIsurPOO1Gyot9IP3
-mZcAn37tuvOBGU4nzXRi6Egu0Bgju+/C
-=QPFL
+iEYEARECAAYFAkyZCwUACgkQzJrj3cAXR0lWzQCbBKfyLJL1nNCavuz5k7mKHolZ
+YxwAoLZYa8EPAPdMC6NK7V8/cjchpmKB
+=ot5C
 -----END PGP SIGNATURE-----
