@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*github-cli-0.3.0 (21 Sep 2010)
+
+  21 Sep 2010; James Rowe <jnrowe@gmail.com> +github-cli-0.3.0.ebuild:
+  Version bump [#184].
+
   16 Sep 2010; James Rowe <jnrowe@gmail.com> github-cli-0.2.9.ebuild,
   files/github-cli-0.2.9-Use_pythons_json.patch:
   Fixed simplejson stdlib support.
